// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectResources shows clusters 1`] = `
<div>
  <div
    class="makeStyles-root-21"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root ForwardRef(Accordion)-root-24 MuiAccordion-rounded Mui-expanded ForwardRef(Accordion)-expanded-25 MuiAccordion-gutters css-16rgl2j-MuiPaper-root-MuiAccordion-root"
    >
      <div
        aria-expanded="true"
        class="MuiButtonBase-root MuiAccordionSummary-root ForwardRef(AccordionSummary)-root-26 Mui-expanded ForwardRef(AccordionSummary)-expanded-28 MuiAccordionSummary-gutters css-ezupba-MuiButtonBase-root-MuiAccordionSummary-root"
        role="button"
        tabindex="0"
      >
        <div
          class="MuiAccordionSummary-content ForwardRef(AccordionSummary)-content-29 Mui-expanded ForwardRef(AccordionSummary)-expanded-28 MuiAccordionSummary-contentGutters css-o4b71y-MuiAccordionSummary-content"
        >
          <h5
            class="MuiTypography-root MuiTypography-h5 makeStyles-root-23 css-k8n68h-MuiTypography-root"
          >
            Test Project
          </h5>
        </div>
        <div
          class="MuiAccordionSummary-expandIconWrapper Mui-expanded ForwardRef(AccordionSummary)-expanded-28 css-yw020d-MuiAccordionSummary-expandIconWrapper"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="ExpandMoreIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
          </svg>
        </div>
      </div>
      <div
        class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-pwcg7p-MuiCollapse-root"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
          >
            <div
              class="MuiAccordion-region"
              role="region"
            >
              <div
                class="MuiAccordionDetails-root ForwardRef(AccordionDetails)-root-30 css-1l0wl9e-MuiAccordionDetails-root"
              >
                <div
                  class="makeStyles-root-22"
                >
                  ProjectClusters Mock 
                  {"project":{"key":"test-project","name":"Test Project"}}
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProjectResources shows notebooks 1`] = `
<div>
  <div
    class="makeStyles-root-1"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root ForwardRef(Accordion)-root-4 MuiAccordion-rounded Mui-expanded ForwardRef(Accordion)-expanded-5 MuiAccordion-gutters css-16rgl2j-MuiPaper-root-MuiAccordion-root"
    >
      <div
        aria-expanded="true"
        class="MuiButtonBase-root MuiAccordionSummary-root ForwardRef(AccordionSummary)-root-6 Mui-expanded ForwardRef(AccordionSummary)-expanded-8 MuiAccordionSummary-gutters css-ezupba-MuiButtonBase-root-MuiAccordionSummary-root"
        role="button"
        tabindex="0"
      >
        <div
          class="MuiAccordionSummary-content ForwardRef(AccordionSummary)-content-9 Mui-expanded ForwardRef(AccordionSummary)-expanded-8 MuiAccordionSummary-contentGutters css-o4b71y-MuiAccordionSummary-content"
        >
          <h5
            class="MuiTypography-root MuiTypography-h5 makeStyles-root-3 css-k8n68h-MuiTypography-root"
          >
            Test Project
          </h5>
        </div>
        <div
          class="MuiAccordionSummary-expandIconWrapper Mui-expanded ForwardRef(AccordionSummary)-expanded-8 css-yw020d-MuiAccordionSummary-expandIconWrapper"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="ExpandMoreIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
          </svg>
        </div>
      </div>
      <div
        class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-pwcg7p-MuiCollapse-root"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
          >
            <div
              class="MuiAccordion-region"
              role="region"
            >
              <div
                class="MuiAccordionDetails-root ForwardRef(AccordionDetails)-root-10 css-1l0wl9e-MuiAccordionDetails-root"
              >
                <div
                  class="makeStyles-root-2"
                >
                  ProjectNotebooks Mock 
                  {"project":{"key":"test-project","name":"Test Project"}}
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProjectResources shows sites 1`] = `
<div>
  <div
    class="makeStyles-root-11"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root ForwardRef(Accordion)-root-14 MuiAccordion-rounded Mui-expanded ForwardRef(Accordion)-expanded-15 MuiAccordion-gutters css-16rgl2j-MuiPaper-root-MuiAccordion-root"
    >
      <div
        aria-expanded="true"
        class="MuiButtonBase-root MuiAccordionSummary-root ForwardRef(AccordionSummary)-root-16 Mui-expanded ForwardRef(AccordionSummary)-expanded-18 MuiAccordionSummary-gutters css-ezupba-MuiButtonBase-root-MuiAccordionSummary-root"
        role="button"
        tabindex="0"
      >
        <div
          class="MuiAccordionSummary-content ForwardRef(AccordionSummary)-content-19 Mui-expanded ForwardRef(AccordionSummary)-expanded-18 MuiAccordionSummary-contentGutters css-o4b71y-MuiAccordionSummary-content"
        >
          <h5
            class="MuiTypography-root MuiTypography-h5 makeStyles-root-13 css-k8n68h-MuiTypography-root"
          >
            Test Project
          </h5>
        </div>
        <div
          class="MuiAccordionSummary-expandIconWrapper Mui-expanded ForwardRef(AccordionSummary)-expanded-18 css-yw020d-MuiAccordionSummary-expandIconWrapper"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="ExpandMoreIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
          </svg>
        </div>
      </div>
      <div
        class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-pwcg7p-MuiCollapse-root"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
          >
            <div
              class="MuiAccordion-region"
              role="region"
            >
              <div
                class="MuiAccordionDetails-root ForwardRef(AccordionDetails)-root-20 css-1l0wl9e-MuiAccordionDetails-root"
              >
                <div
                  class="makeStyles-root-12"
                >
                  ProjectSites Mock 
                  {"project":{"key":"test-project","name":"Test Project"}}
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProjectResources shows storage 1`] = `
<div>
  <div
    class="makeStyles-root-31"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root ForwardRef(Accordion)-root-34 MuiAccordion-rounded Mui-expanded ForwardRef(Accordion)-expanded-35 MuiAccordion-gutters css-16rgl2j-MuiPaper-root-MuiAccordion-root"
    >
      <div
        aria-expanded="true"
        class="MuiButtonBase-root MuiAccordionSummary-root ForwardRef(AccordionSummary)-root-36 Mui-expanded ForwardRef(AccordionSummary)-expanded-38 MuiAccordionSummary-gutters css-ezupba-MuiButtonBase-root-MuiAccordionSummary-root"
        role="button"
        tabindex="0"
      >
        <div
          class="MuiAccordionSummary-content ForwardRef(AccordionSummary)-content-39 Mui-expanded ForwardRef(AccordionSummary)-expanded-38 MuiAccordionSummary-contentGutters css-o4b71y-MuiAccordionSummary-content"
        >
          <h5
            class="MuiTypography-root MuiTypography-h5 makeStyles-root-33 css-k8n68h-MuiTypography-root"
          >
            Test Project
          </h5>
        </div>
        <div
          class="MuiAccordionSummary-expandIconWrapper Mui-expanded ForwardRef(AccordionSummary)-expanded-38 css-yw020d-MuiAccordionSummary-expandIconWrapper"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="ExpandMoreIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
          </svg>
        </div>
      </div>
      <div
        class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-pwcg7p-MuiCollapse-root"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
          >
            <div
              class="MuiAccordion-region"
              role="region"
            >
              <div
                class="MuiAccordionDetails-root ForwardRef(AccordionDetails)-root-40 css-1l0wl9e-MuiAccordionDetails-root"
              >
                <div
                  class="makeStyles-root-32"
                >
                  ProjectStorage Mock 
                  {"project":{"key":"test-project","name":"Test Project"}}
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
